--- a/Node/package.json
+++ b/Node/package.json
@@ -17,6 +17,7 @@
     "install": "^0.13.0",
     "jquery": "^3.2.1",
     "jsdom": "^10.1.0",
+    "method-override": "^3.0.0",
     "moment": "^2.29.3",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
